--- a/tesimonials.html
+++ b/tesimonials.html
@@ -894,9 +894,11 @@ add name age and weeks and weight
 ------------------------------
 form section -- done
 ------------------------------
-create normalise/ reset css/base css // remove bootstrap completely
+header nav for mobile like morethanmuscle --
 ------------------------------
-header nav for mobile like morethanmuscle -- 
+create normalise/ reset css/base css
+------------------------------
+remove bootstrap completely
 ==============================================
 
 
