change in base font size

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -255,7 +255,7 @@
             <div class="copyright-section row">
                 <div class="copyright">
                     <p><small>© 2024 Scott Laidler All Right Reserved. | <a href="privacy-policy.html">Privacy
-                                Policy</a> | <a href="term-and-conditions.html">Terms and Conditions</a></small></p>
+                                Policy</a> | <a href="terms-and-conditions.html">Terms and Conditions</a></small></p>
                 </div>
                 <div class="disclaimer">
                     <p><small>*DISCLAIMER: Results may vary. Results are based on individual circumstances. Timeframes
