--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -196,7 +196,7 @@
             </div>
             <div class="copyright-section row">
                 <div class="copyright">
-                    <p><small>© 2024 Scott Laidler All Right Reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="term-and-conditions.html">Terms and Conditions</a></small></p>
+                    <p><small>© 2024 Scott Laidler All Right Reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-and-conditions.html">Terms and Conditions</a></small></p>
                 </div>
             </div>
         </div>
