--- a/disclaimer.html
+++ b/disclaimer.html
@@ -7,7 +7,7 @@
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="assets/images/W-image.png"> -->
     <!-- <link rel="icon" href="demo_icon.gif" type="image/gif" > -->
 
-    <!-- third-generation iPad with high-resolution Retina display: -->
+        <!-- third-generation iPad with high-resolution Retina display: -->
     <link rel="apple-touch-icon" sizes="144x144" href="letter-s.png" />
     <!-- iPhone with high-resolution Retina display: -->
     <link rel="apple-touch-icon" sizes="114x114" href="letter-s.png" />
@@ -19,38 +19,35 @@
     <link rel="icon" href="assets/images/letter-s.png" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 
-
+    <!-- Base CSS -->
+    <link rel="stylesheet" href="/assets/css/base/base.css">
+    <link rel="stylesheet" href="/assets/css/variables.css">
+    <!-- <link rel="stylesheet" href="/assets/css/base/kevinpowell.css"> -->
+    <!-- <link rel="stylesheet" href="/assets/base/css/andy-version.css"> -->
+    <!-- <link rel="stylesheet" href="/assets/base/css/Eladreset.css"> -->
+    <!-- <link rel="stylesheet" href="/assets/base/css/david-version.css"> -->
+    <!-- <link rel="stylesheet" href="/assets/base/css/modern-normalize.css"> -->
+    
     <!-- Custom CSS Link -->
+
+    <link rel="stylesheet" href="/assets/css/header.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/> -->
 
-    <!-- Font Awesome Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <!-- Font Awesome Link -->
+      <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <!-- Font Family Link -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.css"
-        integrity="sha512-ShLuspGzRsTiMlQ2Rg0e+atjy/gVQr3oYKnKmQkHQ6sxcnDAEOtOaPz2rRmeygV2CtnwUawDyHkGgH4zUbP3Hw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.css" integrity="sha512-ShLuspGzRsTiMlQ2Rg0e+atjy/gVQr3oYKnKmQkHQ6sxcnDAEOtOaPz2rRmeygV2CtnwUawDyHkGgH4zUbP3Hw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" integrity="sha512-rd0qOHVMOcez6pLWPVFIv7EfSdGKLt+eafXh4RO/12Fgr41hDQxfGvoi1Vy55QIVcQEujUE1LQrATCLl2Fs+ag==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
-
-
+    <!-- <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"> -->
 
     <title>Scott Laider - Home Page</title>
 </head>
@@ -129,7 +126,7 @@
         <section class="disclaimer-page-section">
             <div class="container">
                 <h1>Disclaimer</h1>
-                <h3>General</h3>
+                <h2>General</h2>
                 <p>Neither Health Forever Limited (nor any of its employees, agents or representatives), is engaged in
                     rendering medical advice, nor does it (or any of its employees, agents or representatives) hold
                     itself of out as qualified to do so.
@@ -144,7 +141,7 @@
 
 
 
-                <h3>Personal Plans</h3>
+                <h2>Personal Plans</h2>
 
                 <p>Where we provide you with a suggested meal plan and exercise plan (a “Personal Plan”) the information
                     contained therein should not be regarded as or relied upon as being a comprehensive health or
@@ -173,13 +170,13 @@
                     For example, where a program was tailored for a woman who was not pregnant, this would not be
                     appropriate for her to use after becoming pregnant.</p>
 
-                <h3>Other Information</h3>
+                <h2>Other Information</h2>
 
                 <p>Any information that we provide that does not form part of a Personal Plan, whether obtained through
                     our website, e-book, video course, social media (such as Facebook, Instagram or Twitter) or
                     otherwise, is provided for the purposes of general information only.</p>
 
-                <h3>Expected Results</h3>
+                <h2>Expected Results</h2>
 
                 <p>While we believe that for most people, following our programs and methods will lead to their desired
                     results, all exercise programs depend on the individual. Results will be affected by the effort and
