changes in faq,get started, plans and services

--- a/get-started.html
+++ b/get-started.html
@@ -32,6 +32,7 @@
     <!-- Custom CSS Link -->
 
     <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/get-started.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/> -->
 
@@ -121,24 +122,10 @@
 
 <!-- Contact Form Section -->
 
-<section class="get-started-section">
+<section class="get-started-page-section">
   <div class="container">
     <h2 class="get-started-heading">SUBMIT YOUR APPLICATION</h2>
     <p class="get-started-para">Please fill out the form below and let's start your new healthy lifestyle</p>
-    <!-- 
-Full name
-Contact number
-Age
-Email
-City
-Current weight 
-Target weight  
-Your goal  
--- What's your goal? (feel healthier, build lean muscle, lose weight etc) 
--- Let us know your age, your goal, and if you have any existing medical conditions. Please provide as much detail as possible.
-Select plan
-By ticking the box below I agree to have read the privacy policy and consent to the given information being used by More Than Muscle to contact me about their services.
--->
  <div class="get-started-container">
     <div class="get-started-form">
       <form>
@@ -174,7 +161,7 @@ By ticking the box below I agree to have read the privacy policy and consent to 
       <h3>Contact</h3>
       <ul>
         <li>
-          <a href="mailto:support@abcfeg.com" class="mail"><i class="fa-solid fa-envelope"></i> support@abcfeg.com</a>
+          <a href="mailto:support@abcfeg.com" class="mail"><i class="fa-solid fa-envelope"></i> support@xyz.com</a>
         </li>
         <li>
           <a href="tel:" class="number"><i class="fa-solid fa-phone"></i> +1234567890</a>
