--- a/index.html
+++ b/index.html
@@ -522,94 +522,6 @@
 <!-- Success Stories Section -->
 
 <!-- FAQ section -->
-<section class="faq-section">
-  <div class="container">
-      <h2 class="faq-heading">FAQs</h2>
-
-      <div class="row">
-          <div class="col-lg-6">
-              <div class="accordion" id="accordionPanelsStayOpenLeft">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
-                          WHAT MAKES MODEST MUSCLE'S MONTHLY MVMT UNIQUE?
-                      </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" style="">
-                      <div class="accordion-body">
-                          Unlike most programs primarily focused on making you burn more calories and drop weight fast, we focus on fixing your metabolism and building muscle mass – which will help you burn more calories and drop weight not only during your subscription, but long after.Unlike most programs primarily focused on making you burn more calories and drop weight fast, we focus on fixing your metabolism and building muscle mass – which will help you burn more calories and drop weight not only during your subscription, but long after.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                          HOW LONG IS THE PROGRAM?
-                      </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" style="">
-                      <div class="accordion-body">
-                          It’s a monthly program that you can stop / start at any time! You don’t have to wait for the first of the month to join, join whenever you’re able to and you’ll jump in with the group doing the same workouts as everyone else.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                          HOW DO THE MEAL PLANS WORK?
-                      </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" style="">
-                      <div class="accordion-body">
-                          Meal plans will be provided for you based on your body type. Recommended macros are also provided, and you can always message our coaches in the group chat if you’d like customized macros based on your progress pictures/ current physique.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-          </div>
-          <div class="col-lg-6">
-              <div class="accordion" id="accordionPanelsStayOpenRight">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true" aria-controls="panelsStayOpen-collapseFour">
-                          DO I NEED SPECIAL EQUIPMENT:
-                      </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
-                      <div class="accordion-body">
-                          No — You’ll have the option of choosing in-home or gym workouts.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
-                          HOW IS THE MONTHLY MVP CHOSEN?
-                      </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse">
-                      <div class="accordion-body">
-                          There are various criteria for choosing the winners each month. Whether it be based off of completed workouts and consistency with nutrition, group engagement / team spirit, or overall “best transformation”, you can ensure our Monthly MVP’s ALWAYS earn that title.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">
-                          WHAT DO THE WINNERS GET?
-                      </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse" style="">
-                      <div class="accordion-body">
-                          The monthly MVP gets to choose a supplement of their choice, a discounted month membership, or $100 off 1:1 online coaching.
-                    </div>
-                  </div>
-                </div>
-          </div>
-      </div>
-      
-  </div>
-</div></section>
 
 <section class="faq-section">
     <div class="container">
@@ -697,64 +609,6 @@
 </section>
 <!-- FAQ section -->
 
-<!-- Contact Form Section -->
-<!-- 
-Full name
-Contact number
-Age
-Email
-City
-Current weight 
-Target weight  
-Your goal  
--- What's your goal? (feel healthier, build lean muscle, lose weight etc) 
--- Let us know your age, your goal, and if you have any existing medical conditions. Please provide as much detail as possible.
-Select plan
-By ticking the box below I agree to have read the privacy policy and consent to the given information being used by More Than Muscle to contact me about their services.
--->
-
-<!-- <section class="contact-form-section">
-  <div class="container">
-    <h2 class="contact-us-heading">GET STARTED TODAY</h2>
-    <p class="contact-us-para">Please fill out the form below and let's start your new healthy lifestyle</p>
-    <div class="form">
-      <form>
-        <div class="col">
-          <label for="exampleFormControlInput1" class="form-label">Full Name</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-        </div>
-        <div class="col">
-          <label for="exampleFormControlInput1" class="form-label">Age</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-        </div>
-
-
-        <div class="col">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="col">
-          <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-        </div>
-
-
-        <div class="col">
-          <label for="exampleFormControlTextarea1" class="form-label">Your goal</label>
-          <div id="emailHelp" class="form-text">What's your goal? (feel healthier, build lean muscle, lose weight etc).
-          </div>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-
-        </div>
-        <div class="form-submit-button">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-
-      </form>
-    </div>
-  </div>
-</section> -->
-
 
 <section class="get-started-section">
   <div class="container">
@@ -796,7 +650,7 @@ By ticking the box below I agree to have read the privacy policy and consent to 
 
     </main>
     <footer class="footer">
-        <a href="#" id="backToTopBtn" class="backToTopBtn" >Back to Top ↑</a>
+        <a href="#" id="backToTopBtn" class="backToTopBtn" >↑</a>
         <!-- <button class="backToTopBtn">Back to Top ↑</button> -->
         <div class="container">
             <div class="footer-wrapper">
@@ -854,7 +708,7 @@ By ticking the box below I agree to have read the privacy policy and consent to 
                     <p><small>© 2024 Scott Laidler All Right Reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-and-conditions.html">Terms and Conditions</a></small></p>
                 </div>
                 <div class="disclaimer">
-                  <p><small>*DISCLAIMER: Results may vary. Results are based on individual circumstances. Timeframes for results are not guaranteed. Willpower is always required!</small></p>
+                  <small>*DISCLAIMER: Results may vary. Results are based on individual circumstances. Timeframes for results are not guaranteed. Willpower is always required!</small>
                 </div>
             </div>
         </div>
