cahnges in index page

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           <div class="card-body">
             <img src="assets/images/weight-loss.png" class="home-page-how-can-i-help-card-img" alt="...">
             <div class="card-content">
-              <h5 class="card-title">Weight Loss</h5>
+              <h4 class="card-title">Weight Loss</h4>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
             </div>
@@ -337,7 +337,7 @@
           <div class="card-body">
             <img src="assets/images/woman.png" class="home-page-how-can-i-help-card-img" alt="...">
             <div class="card-content">
-              <h5 class="card-title">PCOs</h5>
+              <h4 class="card-title">PCOs</h4>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit sdsdasdsad.</p>
             </div>
@@ -347,7 +347,7 @@
           <div class="card-body">
             <img src="assets/images/insuline.png" class="home-page-how-can-i-help-card-img" alt="...">
             <div class="card-content">
-              <h5 class="card-title">Insulin Resistance</h5>
+              <h4 class="card-title">Insulin Resistance</h4>
               <p class="card-text">This is a longer card with su a longer card with supporting text below as a natural
                 lead-in to additional
                 content. This content is a little bit text below as a natural lead-in
@@ -360,7 +360,7 @@
           <div class="card-body">
             <img src="assets/images/digestive.png" class="home-page-how-can-i-help-card-img" alt="...">
             <div class="card-content">
-              <h5 class="card-title">Gut Health</h5>
+              <h4 class="card-title">Gut Health</h4>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                 content. This content is a  bit longer.</p>
             </div>
@@ -381,7 +381,7 @@
             <h2>KEY FIGURES</h2>
             <div class="keyfigure-features-box">
                 <div class="keyfigure-figures-section">
-                  <div class="keyfigure-icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-1.png" alt="Clients" title="Clients"></div>
+                  <div class="keyfigure-icon-section"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg></div>
                   <div class="keyfigure-content-section">
                     <div class="keyfigure-count count plus">500</div>
                     <p>Clients</p>
@@ -389,7 +389,7 @@
                 </div>
 
                 <div class="keyfigure-figures-section">
-                  <div class="keyfigure-icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-2.png" alt="Operating Years" title="Operating Years"></div>
+                  <div class="keyfigure-icon-section"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"/></svg></div>
                   <div class="keyfigure-content-section">
                     <div class="keyfigure-count count plus">20</div>
                     <p>Operating Years</p>
@@ -397,7 +397,7 @@
                 </div>
 
                 <div class="keyfigure-figures-section">
-                  <div class="keyfigure-icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-3.png" alt="international clients" title="international clients"></div>
+                  <div class="keyfigure-icon-section"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg></div>
                   <div class="keyfigure-content-section">
                     <div class="keyfigure-count count plus">100</div>
                     <p>International Clients</p>
@@ -464,10 +464,9 @@
               <li class="glide__slide">
                 <div class=" ind-success-stories">
                   <div class="client-detail">
-                    <h5 class="client-name">Amit</h5>
+                    <h4 class="client-name">Amit</h4>
                     <p class="client-age">Age: 40s</p>
-                    <p class="client-inmprovement">17kg in 20Weeks</p>
-                    
+                    <p class="client-improvement">17kg in 20Weeks</p>
                   </div>
                   <div class="card-body">
                     <img
@@ -479,9 +478,9 @@
               <li class="glide__slide">
                 <div class="ind-success-stories">
                   <div class="client-detail">
-                    <h5 class="client-name">Amit</h5>
+                    <h4 class="client-name">Amit</h4>
                     <p class="client-age">Age: 40s</p>
-                    <p class="client-inmprovement">17kg in 20Weeks</p>
+                    <p class="client-improvement">17kg in 20Weeks</p>
                   </div>
                   <div class="card-body">
                     <img
@@ -493,9 +492,9 @@
               <li class="glide__slide">
                 <div class="ind-success-stories">
                   <div class="client-detail">
-                    <h5 class="client-name">Amit</h5>
+                    <h4 class="client-name">Amit</h4>
                     <p class="client-age">Age: 40s</p>
-                    <p class="client-inmprovement">17kg in 20Weeks</p>
+                    <p class="client-improvement">17kg in 20Weeks</p>
                   </div>
                   <div class="card-body">
                     <img
@@ -507,8 +506,8 @@
             </ul>
 
             <div class="glide__arrows" data-glide-el="controls">
-              <button class="glide__arrow glide__arrow--left" id="next" data-glide-dir="<"><</button>
-              <button class="glide__arrow glide__arrow--right" id="prev" data-glide-dir=">">></button>
+              <button class="glide__arrow glide__arrow--left" id="next" data-glide-dir="<"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></button>
+              <button class="glide__arrow glide__arrow--right" id="prev" data-glide-dir=">"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></button>
             </div>
             <div class="slider__bullets glide__bullets" id="glide__bullets" data-glide-el="controls[nav]">
              
